@@ -10,6 +10,7 @@ PHP                                                                        NEWS
     (Anatol)
   . Fixed bug #68297 (Application Popup provides too few information). (Anatol)
   . Fixed bug #65769 (localeconv() broken in TS builds). (Anatol)
+  . Fixed bug #65230 (setting locale randomly broken). (Anatol)
 
 - cURL:
   . Fixed bug #67643 (curl_multi_getcontent returns '' when
